--- a/views/FAQs.ejs
+++ b/views/FAQs.ejs
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600&family=Great+Vibes&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/stylesheets/FAQs.css">
+    <link rel="stylesheet" href="/Stylesheets/FAQs.css">
 </head>
 <body>
     <img src="https://www.freeiconspng.com/uploads/floral-png-18.png" class="floral-decoration floral-1 floating floating-1" alt="Floral decoration">
