--- a/views/Services.ejs
+++ b/views/Services.ejs
@@ -8,7 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600&family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="stylesheets/Services.css">
+    <link rel="stylesheet" href="/Stylesheets/Services.css">
+    <style>
+        @media (max-width: 768px) {
+    
+        }
+    </style>
 </head>
 <body>
     <nav id="navbar">
@@ -37,7 +42,9 @@
         <h4>SEAMLESS</h4>
         <h2>Comprehensive Wedding Planning Services for Your Dream Day</h2>
         <p>We offer a wide range of wedding planning services to help you create an unforgettable experience for your loved ones.</p>
-        <img src="https://images.unsplash.com/photo-1523438885200-e635ba2c371e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="Happy Couple">
+        <video src="videos/Video.mp4" autoplay muted loop>
+            Your browser does not support the video tag.
+          </video>
     </section>
 
     <section class="services-section">
