--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -47,28 +47,28 @@
         </div>
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="https://cdn.prod.website-files.com/662fab5d39ccff6e4db90fb5/6638db2040c7bff3b42848dd_low-angle-view-of-beautiful-young-wedding-couple-s-2023-11-27-05-00-28-utc-min.webp" alt="Wedding Couple">
+                <img src="./images/Couples.jpeg" alt="Wedding Couple">
                 <div class="gallery-overlay">
                     <h3>Alakh & Sundari</h3>
                     <p>Beachfront Wedding</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="https://cdn.prod.website-files.com/662fab5d39ccff6e4db90fb5/6638dbafcbed01e73c2ee06e_standing-against-flowers-beautiful-bride-with-his-2023-11-27-05-33-27-utc-min-p-800.webp" alt="Bride with Flowers">
+                <img src="./images/Door.jpeg" alt="Bride with Flowers">
                 <div class="gallery-overlay">
                     <h3>Hathi & Kavita</h3>
                     <p>Garden Wedding</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1523438885200-e635ba2c371e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="Wedding Ceremony">
+                <img src="./images/Hall.jpeg" alt="Wedding Ceremony">
                 <div class="gallery-overlay">
                     <h3>Prachi & Sachin</h3>
                     <p>Vineyard Wedding</p>
                 </div>
             </div>
             <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80" alt="Wedding Reception">
+                <img src="./images/Entrance.jpeg" alt="Wedding Reception">
                 <div class="gallery-overlay">
                     <h3>Radha & Krishna</h3>
                     <p>Ballroom Wedding</p>
@@ -87,7 +87,7 @@
                 <button>Learn More About Us</button>
             </div>
             <div class="about-image">
-                <img src="https://cdn.prod.website-files.com/662fab5d39ccff6e4db90fb5/6638dbafcbed01e73c2ee06e_standing-against-flowers-beautiful-bride-with-his-2023-11-27-05-33-27-utc-min-p-800.webp" alt="Our Team">
+                <img src="./images/Dancefloor.jpeg" alt="Our Team">
             </div>
         </div>
     </section>
