--- a/public/Stylesheets/About-us.css
+++ b/public/Stylesheets/About-us.css
@@ -190,7 +190,7 @@
         .about-hero {
             width: 100%;
             height: 60vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/triangle.jpeg');
             background-size: cover;
             background-position: center;
             display: flex;
