--- a/public/Stylesheets/Contact-us.css
+++ b/public/Stylesheets/Contact-us.css
@@ -157,7 +157,7 @@
         .contact-hero {
             width: 100%;
             height: 60vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1523438885200-e635ba2c371e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/triangle.jpeg');
             background-size: cover;
             background-position: center;
             display: flex;
