--- a/public/Stylesheets/index.css
+++ b/public/Stylesheets/index.css
@@ -157,7 +157,7 @@
         .hero {
             width: 100%;
             height: 100vh;
-                background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1583939003579-730e3918a45a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/images/Stage.jpeg');
             background-size: cover;
             background-position: center;
             display: flex;
