--- a/views/Services.ejs
+++ b/views/Services.ejs
@@ -37,7 +37,7 @@
         <h4>SEAMLESS</h4>
         <h2>Comprehensive Wedding Planning Services for Your Dream Day</h2>
         <p>We offer a wide range of wedding planning services to help you create an unforgettable experience for your loved ones.</p>
-        <video src="videos/Video.mp4" autoplay muted loop>
+        <video src="videos/Stage.mp4" autoplay muted loop>
             Your browser does not support the video tag.
           </video>
     </section>
