--- a/public/Stylesheets/Services.css
+++ b/public/Stylesheets/Services.css
@@ -158,8 +158,8 @@
         /* Hero Section */
         .service-hero {
             width: 100%;
-            height: 60vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/Door.jpeg');
+            height: 100vh;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/Dance.jpeg');
             background-size: cover;
             background-position: center;
             display: flex;
