--- a/public/Stylesheets/index.css
+++ b/public/Stylesheets/index.css
@@ -157,7 +157,7 @@
         .hero {
             width: 100%;
             height: 100vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/images/Stage.jpeg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/images/Dance.jpeg');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -826,4 +826,3 @@
                 font-size: 1.8rem;
             }
         }
-        
