--- a/public/Stylesheets/Contact-us.css
+++ b/public/Stylesheets/Contact-us.css
@@ -157,7 +157,7 @@
         .contact-hero {
             width: 100%;
             height: 60vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/triangle.jpeg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/Hall.jpeg');
             background-size: cover;
             background-position: center;
             display: flex;
