--- a/public/Stylesheets/FAQs.css
+++ b/public/Stylesheets/FAQs.css
@@ -190,8 +190,8 @@
         /* FAQ Section Styles */
         .faq-hero {
             width: 100%;
-            height: 40vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1523438885200-e635ba2c371e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80');
+            height: 80vh;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/Hall.jpeg');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -500,8 +500,13 @@
                 font-size: 1rem;
             }
         }
-        .Still{
+        .Still {
             padding: 30px;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            flex-wrap: wrap;
+            align-items: center;
         }
         .Still button{
             right: unset;
